<resources>
    <string name="app_name">EVProject</string>
    <string name="vehicle">Vehicle</string>
    <string name="volume">Volume</string>
    <string name="cameras">Camera</string>
    <string name="cooling">Cooling</string>
    <string name="phone">Phone</string>
    <string name="navi">Navi</string>
    <string name="apps">Apps</string>
    <string name="music">Music</string>
    <string name="comfort">Comfort</string>

    <string name="my_api_key">AIzaSyBJ8uf3DYEkDrgchVBf_gbPFBKxNdNGTyQ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>